--- a/modules/custom/upsc_quiz/js/package.json
+++ b/modules/custom/upsc_quiz/js/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "html-react-parser": "^0.13.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-compound-timer": "^1.2.0",
     "react-dom": "^16.13.1",
