Add login register form in quiz, make content access private.

--- a/themes/custom/upscwala/package.json
+++ b/themes/custom/upscwala/package.json
@@ -66,5 +66,7 @@
     "serve": "gulp serve",
     "watch": "gulp watch"
   },
-  "dependencies": {}
+  "dependencies": {
+    "react-table": "^7.5.0"
+  }
 }
