--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
     "acquia/lightning": "~5.0.0-beta1",
     "cweagans/composer-patches": "^1.6",
     "drupal/admin_toolbar": "^2.2",
+    "drupal/anonymous_login": "1.x-dev",
     "drupal/ckeditor_font": "1.x-dev",
     "drupal/cog": "1.x-dev",
     "drupal/commerce_instamojo": "1.x-dev",
@@ -46,26 +47,42 @@
     "drupal/default_content": "^1.0@alpha",
     "drupal/default_content_deploy": "1.x-dev",
     "drupal/disqus": "1.x-dev",
+    "drupal/email_registration": "1.x-dev",
     "drupal/entity": "^1.0",
     "drupal/entity_reference_revisions": "^1.8",
     "drupal/field_group": "^3.0",
+    "drupal/fontawesome": "2.x-dev",
     "drupal/jquery_countdown_timer": "^1.1",
     "drupal/lightning_api": "^4.4",
     "drupal/lightning_core": "^5.0",
     "drupal/lightning_layout": "^2.4",
     "drupal/lightning_media": "^4.0",
     "drupal/lightning_workflow": "^3.14",
+    "drupal/mailsystem": "4.x-dev",
     "drupal/media_entity_download": "2.x-dev",
+    "drupal/mimemail": "1.x-dev",
     "drupal/paragraphs": "^1.12",
     "drupal/paypal_payment": "1.x-dev",
+    "drupal/phpmailer_smtp": "1.x-dev",
     "drupal/range": "^1.1",
     "drupal/responsive_menu": "^4.0",
+    "drupal/restui": "1.x-dev",
+    "drupal/shariff": "1.x-dev",
+    "drupal/simple_recaptcha": "1.x-dev",
     "drupal/simplenews": "3.x-dev",
     "drupal/slick_views": "^2.3",
+    "drupal/social_api": "2.0-rc3",
+    "drupal/social_auth": "2.x-dev",
+    "drupal/social_auth_facebook": "2.x-dev",
+    "drupal/social_auth_google": "2.x-dev",
     "drupal/social_media": "1.x-dev",
+    "drupal/state_machine": "1.x-dev",
+    "drupal/telephone_validation": "2.x-dev",
     "drupal/twig_tweak": "3.x-dev",
     "drupal/upgrade_status": "^2.0",
+    "drupal/views_autocomplete_filters": "1.x-dev",
     "drupal/views_bulk_operations": "^3.6",
+    "drupal/visitors": "^2.4",
     "drupal/webform": "6.x-dev",
     "drush/drush": "^10.2",
     "oomphinc/composer-installers-extender": "^1.1"
@@ -154,6 +171,9 @@
       "drupal/disqus": {
         "Drupal 9 readiness": "https://www.drupal.org/files/issues/2020-07-02/D9-readiness-3143716-9.patch",
         "Call to undefined method AccountProxy::getUsername()": "https://www.drupal.org/files/issues/2020-06-09/drupal9compatibility-3149713-3.patch"
+      },
+      "drupal/visitors": {
+        "in Drupal 9 Patch - Call to undefined function Drupal\\visitors\\": "https://www.drupal.org/files/issues/2020-06-19/3153120-2.patch"
       }
     }
   }
