--- a/modules/custom/upsc_quiz/js/package.json
+++ b/modules/custom/upsc_quiz/js/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.13.1",
     "react-google-recaptcha": "^2.1.0",
     "react-router": "^5.2.0",
+    "react-table": "^7.5.0",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
